Fix tabs styles to not jump pixels

--- a/resources/sass/core/tabs.scss
+++ b/resources/sass/core/tabs.scss
@@ -1,8 +1,31 @@
 
-.tabs:not(.is-toggle) li > a {
-    margin-bottom: -3px !important;
+.tabs {
+    &.is-toggle {
+        & li + li {
+            margin-left: 0px;
+        }
 
-    &:hover {
-        border-bottom-color: $grey !important;
+        a:hover {
+            color: $white;
+            background-color: rgba($primary, 75%);
+        }
+    }
+
+    &:not(.is-toggle) ul {
+        border: none;
+
+        & li {
+            border-bottom: 1px solid $white;
+        }
+    }
+
+    & ul li {
+        &:first-child {
+            margin-top: 0.25em;
+        }
+
+        &:hover {
+            border-bottom-color: $grey !important;
+        }
     }
 }
